fixed issue with installing agent outside of venv

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -32,8 +32,8 @@ gryt_home: /home/gryt
 agent_install_dir: /opt/gryt-ci-agent
 
 # Git repository (update with your actual repo)
-agent_git_repo: "https://github.com/your-org/gryt-ci-agent.git"
-agent_git_version: "main"  # or specific tag/branch
+agent_git_repo: "https://github.com/EpykLab/gryt-ci-agent.git"
+agent_git_version: "master"  # or specific tag/branch
 
 # Python version
 python_version: "3.12"
