--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ dependencies = [
     "uvicorn>=0.35.0",
 ]
 
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["agent*"]
+exclude = ["ansible*", "builder*"]
+
 [dependency-groups]
 dev = [
     "pytest>=8.4.2",
